@@ -1,12 +1,12 @@
 <?xml version="1.0" standalone="yes"?>
-  <div class="toolbar"
+<var:if condition="hasButtons"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:var="http://www.skyrix.com/od/binding"
     xmlns:const="http://www.skyrix.com/od/constant"
     xmlns:rsrc="OGo:url"
     xmlns:label="OGo:label"
     xmlns:so="http://www.skyrix.com/od/so-lookup">
-
+  <div class="toolbar">
     <var:foreach list="toolbarConfig" item="toolbarGroup">
       <var:foreach list="toolbarGroup" item="buttonInfo">
 	<var:if condition="isButtonEnabled">
@@ -36,3 +36,4 @@
       </var:if>
     </var:foreach>
   </div>
+</var:if>
